# sentinel

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  DESIGN.md  README.md  audit_report.py  docker-compose.yml  documentation_report.md  index.html  missing_modules_report.md  package-lock.json  package.json  setup.sh  stub_modules_report.md  vitest.config.ts
__tests__/: hunter.test.ts  rag.test.ts
config/: config.yaml  schema.ts
docs/: ARCHITECTURE.md  BUG_REPORT.md  FILE_TREE.txt  SUMMARY.md  agent-context.md  architecture.md  master.md  proto_files.txt  rag_deps.txt  rust_deps.txt  worker_deps.txt
proto/: gap_engine.proto  gap_engine_pb2.py  gap_engine_pb2_grpc.py  health_pb2.py  health_pb2_grpc.py  hunter.proto  hunter_pb2.py  hunter_pb2_grpc.py  rag.proto  rag_pb2_grpc.py
scripts/: check-all.sh  control-unit.sh  ollama_proxy.py  pre-check.sh  security-audit.sh
sidecars/hunter/: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vitest.config.ts
sidecars/hunter/__tests__/: hunter.test.ts  rate-limiter.test.ts
sidecars/hunter/src/: index.ts  portal-analyzer.ts  portal-runner.ts  rate-limiter.ts  scraper-engine.ts  server.ts  telemetry.ts  types.ts
sidecars/hunter/src_py/: models.py  portal_analyzer.py  portal_runner.py  rate_limiter.py  scraper_engine.py  server.py
sidecars/hunter/src_py/adapters/: __init__.py  base.py  brightspyre.py  generic.py
sidecars/hunter/src_py/utils/: __init__.py  search_detector.py
sidecars/hunter/tests/: test_adapters.py  test_har_integration.py  test_models.py  test_rate_limiter.py  test_search_detector.py
sidecars/worker/: Dockerfile  package-lock.json  package.json  pyproject.toml
sidecars/worker/src/: index.ts
sidecars/worker/src_py/: worker.proto  worker.py  worker_pb2.py  worker_pb2_grpc.py
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  ipc.rs  lib.rs  main.rs  sidecar.rs  telemetry.rs
src-tauri/src/commands/: credentials.rs  db_commands.rs  drafting.rs  hunting.rs  knowledge_base.rs  mod.rs  settings.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.sql
tests/: conftest.py  (+6 more)
(+72 files in other folders)
