[package]
name = "sentinel_rfp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
correctness = "deny"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentinel_rfp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.11"

[dependencies]
tauri = { version = "2", features = [] }
tonic = "0.11"
prost = "0.12"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.38.0", features = ["full"] }
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
tracing-opentelemetry = "0.24"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.13.3", features = ["json"] }
base64 = "0.22.1"
tempfile = "3.10.1"

