[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-hunter"
version = "0.1.0"
description = "Sentinel Hunter Sidecar Service"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.62.1",
    "protobuf==4.25.3",
    "playwright==1.44.0",
    "google-generativeai==0.5.2",
    "redis==5.0.4",
    "grpcio-health-checking==1.62.1"
]
