[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-worker"
version = "0.1.0"
description = "Sentinel Worker Sidecar Service"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.62.1",
    "protobuf==4.25.3",
    "redis==5.0.4",
    "grpcio-health-checking==1.62.1"
]
